k8s/deployment-builder.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builder
spec:
  selector:
    matchLabels:
      app: builder
  replicas: 1
  template:
    metadata:
      labels:
        app: builder
    spec:
      containers:
      - name: builder
        image: builder:latest
        imagePullPolicy: Never
        volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
        ports:
        - containerPort: 50050
          name: grpc
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
          type: Socket
