k8s/deployment-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongo-port
          volumeMounts:
            - name: database
              mountPath: /usr/local/mongodb

        - name: mongo-express
          image: mongo-express
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: mongo-ex-port
      volumes:
        - name: database
          hostPath:
            path: database
            type: DirectoryOrCreate
