k8s/deployment-supervisor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supervisor
spec:
  selector:
    matchLabels:
      app: supervisor
  replicas: 1
  template:
    metadata:
      labels:
        app: supervisor
    spec:
      serviceAccountName: supervisor-sa 
      containers:
      - name: supervisor
        image: supervisor:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50050
          name: grpc
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
          type: Socket
