k8s/xmartlake-front-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xmartlake-front-app
spec:
  selector:
    matchLabels:
      app: xmartlake-front-app
  replicas: 1
  template:
    metadata:
      labels:
        app: xmartlake-front-app
    spec:
      containers:
        - name: xmartlake-front-app
          image: xmartlake-front-app:latest
          ports:
            - containerPort: 5173
              name: front
