k8s/service-builder.yml
apiVersion: v1
kind: Service
metadata:
  name: builder
spec:
  selector:
    app: builder
  ports:
  - name: grpc
    port: 50050
    targetPort: grpc
