k8s/service-coordinator.yml
apiVersion: v1
kind: Service
metadata:
  name: coordinator
spec:
  selector:
    app: coordinator
  ports:
  - name: http
    port: 80
    targetPort: http
  type: NodePort
