k8s/service-supervisor.yml
apiVersion: v1
kind: Service
metadata:
  name: supervisor
spec:
  selector:
    app: supervisor
  ports:
  - name: grpc
    port: 50050
    targetPort: grpc
