k8s/sevice-mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
  - name: mongo
    port: 27017
    targetPort: mongo-port
