k8s/supervisor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supervisor
spec:
  selector:
    matchLabels:
      app: supervisor
  replicas: 1
  template:
    metadata:
      labels:
        app: supervisor
    spec:
      containers:
      - name: supervisor
        image: supervisor:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50050
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: supervisor
spec:
  selector:
    app: supervisor
  ports:
  - name: grpc
    port: 50050
    targetPort: grpc
