k8s/coordinator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator
spec:
  selector:
    matchLabels:
      app: coordinator
  replicas: 1
  template:
    metadata:
      labels:
        app: coordinator
    spec:
      containers:
      - name: coordinator
        image: coordinator:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 7000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: coordinator
spec:
  selector:
    app: coordinator
  ports:
  - name: http
    port: 80
    targetPort: http
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator-ingress
spec:
  rules:
  - host: xmartlake.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coordinator
            port:
              name: http
