k8s/ingress-coordinator.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator-ingress
spec:
  rules:
  - host: xmartlake.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coordinator
            port:
              name: http
              port:
                number: 80

apiVersion: v1
kind: Service
metadata:
  name: coordinator
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 7000
  selector:
    app: coordinator
